@@ -82,9 +82,9 @@ Valid keys are \fIguid\fR, \fIasset\-tag\fR, \fIservice\-tag\fR,
 \fIidrac\-ipv4\-url\fR, \fIidrac\-gui\-webserver\-control\fR,
 \fIcmc\-ipv4\-url\fR, \fIcmc\-ipv6\-info\fR, \fIcmc\-ipv6\-url\fR,
 \fImac\-addresses\fR.  Command confirmed to work on Dell Poweredge
-2900, 2950, R610, R710, M600, M610, M610X, and M910 (Dell 10G and 11G
-Poweredge systems).  However, individual system information options
-may not be readable or available on every system.
+2900, 2950, R610, R710, M600, M610, M610X, M910, and R905.  However,
+individual system information options may not be readable or available
+on every system.
 .TP
 .B get-nic-selection
 This OEM command will determine the current NIC selection for IPMI as
